<resources>
    <string name="app_name">Home DZ</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home Dz</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_add_home">Ajouter une annonce</string>
    <string name="menu_mes_annonces">Mes Annonces</string>
    <string name="menu_mes_favoris">Mes Favoris</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_deconnecter">Déconnecter</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidGFyZWtkZXYiLCJhIjoiY2twZ3h2eWNmMDB2azJwcW9ka2ZzZnlpNyJ9.5bVMvYzJRjA2r5p1H7XGLg</string>
    <string name="title_activity_liste_annonces">Liste Annonces</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="menurecherche">Annonces</string>
    <string name="title_liste_annonce">Annonces</string>
    <string name="title_map_annonce">Maps</string>
</resources>
