<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rech_annonce"
            android:icon="@drawable/ic_searche"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ajouter_annonce"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/menu_add_home" />
        <item
            android:id="@+id/nav_mes_annonces"
            android:icon="@drawable/ic_liste"
            android:title="@string/menu_mes_annonces" />
        <item
            android:id="@+id/nav_mes_favoris"
            android:icon="@drawable/ic_favoris"
            android:title="@string/menu_mes_favoris" />
    </group>

    <item android:title="Utilisateur">
        <menu>
            <item
                android:id="@+id/nav_deconnecter"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_deconnecter" />
        </menu>
    </item>

</menu>
